# SophusPy

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  build_pybind11.sh  pyproject.toml  setup.py  sophus.cpp  sophus.pxd  sophus.pyx  sophus_def.pxd  sophuspy.cpp  test.py
.github/workflows/: build-and-deploy.yml  python-app.yml
include/: eigen.hpp  se3_extension.hpp  useful.hpp
include/extension/: rootex.hpp  se3ex.hpp  so3ex.hpp
python/: root.h  se3.h  so3.h
sophus/: __init__.py  useful.hpp
sophus/include/extension/: se3ex.hpp
sophus/python/: root.h  se3.h
sophuspy/: sophuspy.cpp
sophuspy/include/extension/: eigenex.hpp  rootex.hpp  se2ex.hpp  se3ex.hpp  so2ex.hpp  so3ex.hpp
sophuspy/include/original/: common.hpp  se2.hpp  so2.hpp
sophuspy/python/: root.h  se2.h  se3.h  so2.h  so3.h
test/: test_root.py  test_se3.py  test_so3.py
tests/: test_root.py  test_se2.py  test_se3.py  test_so2.py  test_so3.py
